<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/contemp"
    tools:context=".FormLogin">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:background="@drawable/edit_text_login"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_login"
        android:textColorHint="@color/black"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="18sp"
    />

    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_login"
        android:hint="@string/senha_login"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/mensagem_erro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/bt_goog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:text="@string/gg_entrar"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:icon="@drawable/googlem"
        app:iconPadding="5dp"
        app:iconTint="#9b2226"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />


    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entre_login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/black50"
        app:strokeColor ="@color/white"
        app:strokeWidth ="2dp"
        app:cornerRadius ="10dp"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/txt_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botton_cadastrar"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        />
</LinearLayout>